2.2/manifests/todo-backend-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
        - name: todo-backend
          image: johnd0es/todo-backend:2.2
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
spec:
  selector:
    app: todo-backend
  ports:
    - port: 3000
      targetPort: 3000
